--- a/src/EFSecondLevelCache.Core/project.json
+++ b/src/EFSecondLevelCache.Core/project.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.0.0-*",
+    "version": "1.0.1-*",
 
     "authors": [ "Vahid Nasiri" ],
     "packOptions": {
@@ -12,17 +12,26 @@
 
 
     "dependencies": {
-        "CacheManager.Core": "0.9.0",
-        "NETStandard.Library": "1.6.0",
-        "System.Reflection.TypeExtensions": "4.1.0",
-        "Microsoft.AspNetCore.Http.Abstractions": "1.0.0",
-        "Microsoft.EntityFrameworkCore": "1.0.1",
-        "Microsoft.EntityFrameworkCore.Relational": "1.0.1"
+        "CacheManager.Core": "0.9.1",
+        "Microsoft.AspNetCore.Http.Abstractions": "1.1.0",
+        "Microsoft.EntityFrameworkCore": "1.1.0",
+        "Microsoft.EntityFrameworkCore.Relational": "1.1.0",
+        "NETStandard.Library": "1.6.1",
+        "System.Reflection.TypeExtensions": "4.3.0"
     },
 
     "frameworks": {
-        "netstandard1.6": {
-            "imports": "dnxcore50"
+        "netcoreapp1.1": {
+            "dependencies": {
+                "Microsoft.NETCore.App": {
+                    "type": "platform",
+                    "version": "1.1.0"
+                }
+            },
+            "imports": [
+                "dnxcore50",
+                "portable-net45+win8"
+            ]
         }
     },
 
