--- a/src/Tests/EFSecondLevelCache.Core.NET46Sample/EFSecondLevelCache.Core.NET46Sample/packages.config
+++ b/src/Tests/EFSecondLevelCache.Core.NET46Sample/EFSecondLevelCache.Core.NET46Sample/packages.config
@@ -1,31 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CacheManager.Core" version="0.9.3" targetFramework="net46" />
-  <package id="CacheManager.Microsoft.Extensions.Caching.Memory" version="0.9.3" targetFramework="net46" />
-  <package id="CacheManager.Serialization.Json" version="0.9.3" targetFramework="net46" />
-  <package id="EFSecondLevelCache.Core" version="1.0.3" targetFramework="net46" />
-  <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.EntityFrameworkCore" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.EntityFrameworkCore.InMemory" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="1.1.0" targetFramework="net46" />
+  <package id="CacheManager.Core" version="1.0.0" targetFramework="net46" />
+  <package id="CacheManager.Microsoft.Extensions.Caching.Memory" version="1.0.0" targetFramework="net46" />
+  <package id="CacheManager.Serialization.Json" version="1.0.0" targetFramework="net46" />
+  <package id="CacheManager.StackExchange.Redis" version="1.0.0" targetFramework="net46" />
+  <package id="EFSecondLevelCache.Core" version="1.0.4" targetFramework="net46" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.1" targetFramework="net46" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="1.1.1" targetFramework="net46" />
+  <package id="Microsoft.EntityFrameworkCore" version="1.1.1" targetFramework="net46" />
+  <package id="Microsoft.EntityFrameworkCore.InMemory" version="1.1.1" targetFramework="net46" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.1" targetFramework="net46" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.1" targetFramework="net46" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="1.1.1" targetFramework="net46" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.Extensions.Logging" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.Extensions.Options" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.Extensions.Logging" version="1.1.1" targetFramework="net46" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net46" />
+  <package id="Microsoft.Extensions.Options" version="1.1.1" targetFramework="net46" />
   <package id="Microsoft.Extensions.Primitives" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
+  <package id="redis-64" version="3.0.503" targetFramework="net46" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net46" />
+  <package id="StackExchange.Redis.StrongName" version="1.2.1" targetFramework="net46" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
-  <package id="System.Collections.Immutable" version="1.3.0" targetFramework="net46" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net46" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net46" />
   <package id="System.Console" version="4.3.0" targetFramework="net46" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net46" />
@@ -34,7 +37,7 @@
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net46" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net46" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net46" />
-  <package id="System.Interactive.Async" version="3.0.0" targetFramework="net46" />
+  <package id="System.Interactive.Async" version="3.1.1" targetFramework="net46" />
   <package id="System.IO" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net46" />
@@ -42,8 +45,8 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.Linq" version="4.3.0" targetFramework="net46" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net46" />
-  <package id="System.Linq.Queryable" version="4.0.1" targetFramework="net46" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="net46" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net46" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net46" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net46" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net46" />
