--- a/src/Tests/EFSecondLevelCache.Core.Tests/EFSecondLevelCache.Core.Tests.csproj
+++ b/src/Tests/EFSecondLevelCache.Core.Tests/EFSecondLevelCache.Core.Tests.csproj
@@ -19,14 +19,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CacheManager.StackExchange.Redis" Version="1.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.1.13" />
+    <PackageReference Include="MSTest.TestAdapter" Version="1.1.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="1.1.1" />
-    <PackageReference Include="CacheManager.Core" Version="0.9.3" />
-    <PackageReference Include="CacheManager.Microsoft.Extensions.Caching.Memory" Version="0.9.3" />
-    <PackageReference Include="CacheManager.Serialization.Json" Version="0.9.3" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.1.13" />
+    <PackageReference Include="CacheManager.Core" Version="1.0.0" />
+    <PackageReference Include="CacheManager.Microsoft.Extensions.Caching.Memory" Version="1.0.0" />
+    <PackageReference Include="CacheManager.Serialization.Json" Version="1.0.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.1.14" />
   </ItemGroup>
 
   <ItemGroup>
